mType/tests/testFiles/import/error/mixedcircular/MixedA.mt
import * from "./MixedB.mt"

class MixedA {
    fun test(): String {
        var b = MixedB();
        return "A uses B";
    }
}
